# atlas

./: .dockerignore  .env.example  .gitignore  CLAUDE.local.md  CLAUDE.md  Dockerfile  Dockerfile.frontend  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  run_dashboard.py
.github/workflows/: docker-build.yml
data/scat/: .gitkeep
docker/: README.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: atlas-dashboard.json  dashboard.yml
references/: scat-paper.txt
results/experiments/: .gitkeep
scripts/: build-multiplatform.sh  setup.sh
src/atlas_atc/: config.py
src/atlas_atc/api/: main.py
src/atlas_atc/data/: loader.py  processor.py
src/atlas_atc/evaluation/: benchmark.py  metrics.py
src/atlas_atc/frontend/: dashboard.py
src/atlas_atc/models/: base.py  kalman.py  linear.py  lstm.py  transformer.py
src/atlas_atc/utils/: helpers.py
tests/: test_critical_fixes.py  test_evaluation.py
